--- a/assignment2/css/styles.css
+++ b/assignment2/css/styles.css
@@ -2,110 +2,259 @@
 * {
   box-sizing: border-box;
 }
-h1 {
-  margin-bottom: 15px;
+
+body {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: sans-serif;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
+  padding: 0 10px 5px 10px;
+  margin-top: 45px;
+  margin-bottom: 0;
   margin-right: auto;
   margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  color: black;
+
+  height: 100px;
+  overflow: hidden;
 }
 
-/* Simple Responsive Framework. */
+p:hover {
+  cursor: ns-resize;
+  overflow: scroll;
+}
+
+section {
+  position: relative;
+  background-color: grey;
+  border: black solid 1px;
+  margin: 10px;
+}
+
 .row {
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
+h1{
+  padding:10px;
+  margin-bottom: 15px;
 }
 
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+#menu-title {
+  text-align: center;
+  font-family: sans-serif;
+}
+
+#cat-title {
+  text-align: left;
+  font-family: serif;
+  font-size: 120%;
+}
+
+/********** Desktop View **********/
+/*** All 3 sections should take up equal space ***/
+@media (min-width: 992px) {
+  .col-desktop-1, .col-desktop-2, .col-desktop-3, .col-desktop-4, .col-desktop-5, .col-desktop-6, .col-desktop-7, .col-desktop-8, .col-desktop-9, .col-desktop-10, .col-desktop-11, .col-desktop-12 {
     float: left;
-    border: 1px solid green;
   }
-  .col-md-1 {
+  .col-desktop-1 {
     width: 8.33%;
   }
-  .col-md-2 {
+  .col-desktop-2 {
     width: 16.66%;
   }
-  .col-md-3 {
+  .col-desktop-3 {
     width: 25%;
   }
-  .col-md-4 {
+  .col-desktop-4 {
     width: 33.33%;
   }
-  .col-md-5 {
+  .col-desktop-5 {
     width: 41.66%;
   }
-  .col-md-6 {
+  .col-desktop-6 {
     width: 50%;
   }
-  .col-md-7 {
+  .col-desktop-7 {
     width: 58.33%;
   }
-  .col-md-8 {
+  .col-desktop-8 {
     width: 66.66%;
   }
-  .col-md-9 {
+  .col-desktop-9 {
     width: 74.99%;
   }
-  .col-md-10 {
+  .col-desktop-10 {
     width: 83.33%;
   }
-  .col-md-11 {
+  .col-desktop-11 {
     width: 91.66%;
   }
-  .col-md-12 {
+  .col-desktop-12 {
     width: 100%;
   }
+  #cat-title, .mobile-section-title{
+    background-color: transparent;
+    color:transparent;
+    position: absolute;
+  } 
+  section .main-section-title {
+    position: absolute;
+    right:0px;
+    top:0px;
+    margin: 0;
+    padding: 5px 20px 5px 20px;
+    border: black solid 1px;
+  }
+
+  #section-chicken .main-section-title {
+    background-color: salmon;
+  }
+
+  #section-beef .main-section-title{
+    background-color: red;
+    color: white;
+  }
+
+  #section-sushi .main-section-title{
+    background-color: lightyellow;
+  }  
+}
+
+/********** Tablet View **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-tablet-1, .col-tablet-2, .col-tablet-3, .col-tablet-4, .col-tablet-5, .col-tablet-6, .col-tablet-7, .col-tablet-8, .col-tablet-9, .col-tablet-10, .col-tablet-11, .col-tablet-12 {
+    float: left;
+  }
+  .col-tablet-1 {
+    width: 8.33%;
+  }
+  .col-tablet-2 {
+    width: 16.66%;
+  }
+  .col-tablet-3 {
+    width: 25%;
+  }
+  .col-tablet-4 {
+    width: 33.33%;
+  }
+  .col-tablet-5 {
+    width: 41.66%;
+  }
+  .col-tablet-6 {
+    width: 50%;
+  }
+  .col-tablet-7 {
+    width: 58.33%;
+  }
+  .col-tablet-8 {
+    width: 66.66%;
+  }
+  .col-tablet-9 {
+    width: 74.99%;
+  }
+  .col-tablet-10 {
+    width: 83.33%;
+  }
+  .col-tablet-11 {
+    width: 91.66%;
+  }
+  .col-tablet-12 {
+    width: 100%;
+  }
+  #cat-title, .mobile-section-title {
+    background-color: transparent;
+    color:transparent;
+    position: absolute;
+  }
+  section .main-section-title {
+    position: absolute;
+    right:0px;
+    top:0px;
+    margin: 0;
+    padding: 5px 20px 5px 20px;
+    border: black solid 1px;
+  }
+
+  #section-chicken .main-section-title {
+    background-color: salmon;
+  }
+
+  #section-beef .main-section-title{
+    background-color: red;
+    color: white;
+  }
+
+  #section-sushi .main-section-title{
+    background-color: lightyellow;
+  }  
+}
+/********** Mobile View **********/
+@media (max-width: 767px) {
+  .col-mobile-1, .col-mobile-2, .col-mobile-3, .col-mobile-4, .col-mobile-5, .col-mobile-6, .col-mobile-7, .col-mobile-8, .col-mobile-9, .col-mobile-10, .col-mobile-11, .col-mobile-12 {
+    float: left;
+  }
+  .col-mobile-1 {
+    width: 8.33%;
+  }
+  .col-mobile-2 {
+    width: 16.66%;
+  }
+  .col-mobile-3 {
+    width: 25%;
+  }
+  .col-mobile-4 {
+    width: 33.33%;
+  }
+  .col-mobile-5 {
+    width: 41.66%;
+  }
+  .col-mobile-6 {
+    width: 50%;
+  }
+  .col-mobile-7 {
+    width: 58.33%;
+  }
+  .col-mobile-8 {
+    width: 66.66%;
+  }
+  .col-mobile-9 {
+    width: 74.99%;
+  }
+  .col-mobile-10 {
+    width: 83.33%;
+  }
+  .col-mobile-11 {
+    width: 91.66%;
+  }
+  .col-mobile-12 {
+    width: 100%;
+  }
+  #menu-title, .main-section-title {
+    background-color: transparent;
+    color:transparent;
+    position: absolute;
+  }
+  .mobile-section-title {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    margin: 0;
+    border: black solid 1px;
+  }
+  #section-chicken .mobile-section-title {
+    background-color: salmon;
+  }
+  #section-beef .mobile-section-title{
+    background-color: red;
+    color: white;
+  }
+  #section-sushi .mobile-section-title{
+    background-color: lightyellow;
+  } 
+  p {
+    margin-top: 5px;
+  }   
 }
